--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
-relativeURLs = false
 canonifyURLs = true
-baseURL = "http://localhost:8080/gitops-hugo"
+baseURL = "https://davidwmcneill.github.io/"
 
 languageCode = "en-us"
 title = "DevOps Blog"
