--- a/config.toml
+++ b/config.toml
@@ -44,5 +44,5 @@ resourceDir = "../resources"
   rss = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-mid-gray"
-  featured_image = "https://images.unsplash.com/photo-1518364538800-6bae3c2ea0f2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=3428&q=80"
+  featured_image = "https://images.pexels.com/photos/87089/rocket-lift-off-liftoff-astronautics-87089.jpeg"
   recent_posts_number = 3
